--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   <h1 class="heading">My Top Shows</h1>
   <p class="description">These are my all time favourite shows.</p>
     <div class="container text-center add">
-<a href="{{url_for('add')}}" class="button">Add Show</a>
+                   <a href="{{url_for('add')}}" name="add" class="button">Add Show</a>
 </div>
     <div class="row">
         <div class="column">
